# agent-tools

./: .gitignore  README.md  __init__.py  pyproject.toml
agent_tools/: __init__.py
agent_tools/advanced/: __init__.py  agent.py  notebook.py  team.py  tool_search.py  worktree.py
agent_tools/filesystem/: __init__.py  edit.py  glob.py  grep.py  multiedit.py  read.py  write.py
agent_tools/info/: __init__.py  web_fetch.py  web_search.py
agent_tools/interactive/: __init__.py  ask.py
agent_tools/system/: __init__.py  bash.py  batch.py  lsp.py
agent_tools/tasks/: __init__.py  plan.py  task.py  todo.py
filesystem/: __init__.py  glob.py  grep.py  write.py
info/: __init__.py  web_fetch.py  web_search.py
interactive/: __init__.py
src/agent_tools/advanced/: __init__.py  agent.py  notebook.py  team.py  tool_search.py  worktree.py
src/agent_tools/filesystem/: edit.py  read.py
src/agent_tools/interactive/: ask.py
src/agent_tools/system/: __init__.py  bash.py  lsp.py
src/agent_tools/tasks/: todo.py
tasks/: __init__.py  plan.py  task.py
